// `Removed` for deprecated features removed in this release.
// `Fixed` for any bug fixes.
// `Security` to invite users to upgrade in case of vulnerabilities.

v1.13.0 (unreleased)
--------------------

Removed
~~~~~~~

- The `:debug-log-level` command was removed as it's replaced by the new
  `logging.level.console` setting.

Changed
~~~~~~~

- The `tor_identity` userscript now takes the password via a `-p` flag and has
  a new `-c` flag to customize the Tor control port.
- `:config-write-py` now adds a note about `config.py` files being targeted at
  advanced users.
- `:report` now takes two optional arguments for bug/contact information, so
  that it can be used without the report window popping up.
- New `t[Cc][Hh]` default bindings which work similarly to the `t[Ss][Hh]`
  bindings for JavaScript but toggle cookie permissions.
- Changes to settings:
  * `fonts.tabs` has been split into `fonts.tabs.{selected,unselected}` (see
    below).
  * `statusbar.hide` has been renamed to `statusbar.show` with the possible
    values being `always` (`hide = False`), `never` (`hide = True`) or
    `in-mode` (new, only show statusbar outside of normal mode.
  * The `QtFont` config type formerly used for `fonts.tabs` and
    `fonts.debug_console` is now removed and entirely replaced by `Font`. The
    former distinction was mainly an implementation detail, and the accepted
    values shouldn't have changed.

Added
~~~~~

- New settings:
  * `logging.level.ram` and `logging.level.console` to configure the default
    logging levels via the config.
  * `fonts.tabs.selected` and `fonts.tabs.unselected` to set the font of the
    selected tab independently from unselected tabs (e.g. to make it bold).

Fixed
~~~~~

- Crash when `tabs.focus_stack_size` is set to -1.
- Crash when a `pdf.js` file for PDF.js exists, but `viewer.html` does not.
- `:config-write-py` now works with paths starting with `~/...` again.